Progress, or something like it

--- a/content/post/2016-06-21-gwp.md
+++ b/content/post/2016-06-21-gwp.md
@@ -7,7 +7,6 @@ tags:
 - d3
 - dev
 title: Galaxy Workflow Plotter
-url: /2016/06/21/gwp/
 ---
 
 This past week I was frustrated "for the last time" by having to take multiple
@@ -17,6 +16,6 @@ do better...
 Thus, I spent the week working on this mildly useless tool to plot workflows as
 slightly prettier & more succict graphics.
 
-<img src="{{BASE_PATH}}/assets/img/gwp.png" width="100%" />
+<img src="/assets/img/gwp.png" width="100%" />
 
 TODO: design, functionality, lessons learnt with webpack
