--- a/content/post/2016-06-21-gwp.md
+++ b/content/post/2016-06-21-gwp.md
@@ -6,6 +6,7 @@ tags:
 - js
 - d3
 - dev
+- learning
 title: Galaxy Workflow Plotter
 ---
 
@@ -16,6 +17,24 @@ do better...
 Thus, I spent the week working on this mildly useless tool to plot workflows as
 slightly prettier & more succict graphics.
 
-<img src="/assets/img/gwp.png" width="100%" />
+<div class="pure-g grids-example">
+	<div class="pure-u-1">
+		<div class="l-box">
+			<h3>Workflow Plotter</h3>
+		</div>
+	</div>
+	<div class="pure-u-1">
+		<img src="/assets/img/gwp.png" width="100%" />
+	</div>
+	<div class="pure-u-1">
+		<div class="l-box">
+			Image of the GWP
+		</div>
+	</div>
+</div>
 
-TODO: design, functionality, lessons learnt with webpack
+# Design
+
+# Functionality
+
+# Learning
