more well stuff

--- a/content/post/2016-06-21-gwp.md
+++ b/content/post/2016-06-21-gwp.md
@@ -17,10 +17,10 @@ do better...
 Thus, I spent the week working on this mildly useless tool to plot workflows as
 slightly prettier & more succict graphics.
 
-<div class="pure-g grids-example">
+<div class="pure-g well">
 	<div class="pure-u-1">
-		<div class="l-box">
-			<h3>Workflow Plotter</h3>
+		<div class="l-box well-title">
+			Workflow Plotter
 		</div>
 	</div>
 	<div class="pure-u-1">
