--- a/_posts/2017-09-24-remapper.md
+++ b/_posts/2017-09-24-remapper.md
@@ -6,19 +6,17 @@ Tags:
 date: 2017-09-23T18:00:00Z
 title: REmapper
 repo: erasche/remapper
-
+commit: "182257f6cb5916b02c60ccfae2c04e488458f204"
 ---
-
-## REmapper
 
 Redeclipse has a nice octree based world and it's an alright FPS platform. The
 F/OSS nature and octree world makes it ideal for hacking and experiments.
 
-### Initial Hacks
+## Initial Hacks
 
 It took a long time to reverse engineer the format. I am not good with C.
 
-### Perlin Noise
+## Perlin Noise
 
 Some initial experiments here started with very minecraft-y worlds. These were easy to create.
 
@@ -32,7 +30,7 @@ developed:
 This had the unfortunate problem that since it was a voxel world you made quantized changes in height that were very
 visually unpleasant. Unable to create slopes, continual changes in height were impossible.
 
-### Daggerfall
+## Daggerfall
 
 Plenty of reading on [r/proceduralgeneration](https://reddit.com/r/proceduralgeneration) led to finding [this blog
 post](https://web.archive.org/web/20160925032456/http://blog.elysianlegends.com/?p=11) and then [this
@@ -45,7 +43,7 @@ pushers were the only way to change elevation (the red blocks could be jumped up
 
 ![](/assets/img/remapper/hxr-2-sandvika.png)
 
-### Lighting
+## Lighting
 
 Shortly thereafter I experimented with lighting. The original impetus for developing redeclipse maps was playing
 sniper-counter-sniper in old halo 2 maps, but wanting to play a similar game mode online. Our favourite map was Halo 2's
@@ -64,7 +62,7 @@ And eventually tempered my excitement into something less excessive
 
 This was getting to the point of mostly playable.
 
-### Three Dimensions
+## Three Dimensions
 
 Most of the maps up until here were relatively flat. Once lighting was done, I tried to add verticality since that was
 an aspect that was particularly enjoyable in sniper-counter-sniper.
@@ -77,7 +75,7 @@ I also produced "night" versions of a map without the sunlight
 ![](/assets/img/remapper/lillehammer-night-1.png)
 ![](/assets/img/remapper/lillehammer-night-2.png)
 
-### After Effects
+## After Effects
 
 I built a number of new pieces and experimented with different probabilities of spawning various rooms.
 
@@ -97,7 +95,7 @@ A better view of the grid
 
 ![](/assets/img/remapper/grid.png)
 
-### Texturing
+## Texturing
 
 Around this time I decided I needed better texturing than the default ones I'd been using. I was quite fond of the
 stairs.
@@ -126,7 +124,7 @@ There was even a short-lived experiment on railings along walkways using trigono
 ![](/assets/img/remapper/Utvalg_224.png)
 
 
-### Texturing, Again
+## Texturing, Again
 
 Next, a configurable texturing engine was implemented allowing for easily applying different "themes", e.g. a "default"
 theme or a "paper" theme. The default theme is pictured in all of the pervious images. The paper theme:
@@ -148,7 +146,7 @@ texturing process / generation of the configuration files:
 
 ![](/assets/img/remapper/Utvalg_156.png)
 
-### Vectors
+## Vectors
 
 At this point in time, the largest pain point was that defining rooms was horribly unpleasant. Every room had to be
 defined *four* times, one for each and every possible orientation of the pre-fabricated room. A large rewrite occurred
@@ -167,7 +165,7 @@ young and naïve and excited about possibilities. But if you're doing rigorous t
 writing unit tests. Vectors and vector math was implemented to simplify all of the horrible bugs that were in my hacks
 and math. This basically fixed all of the bugs and progress could go on again.
 
-### MagicaVoxel
+## MagicaVoxel
 
 I decided that the map output was painfully slow and that running redeclipse was making my lap too hot. I searched out
 other voxel viewers and found that magicavoxel had an incredibly simple binary format that I could write. This was
