--- a/_posts/2017-09-24-remapper.md
+++ b/_posts/2017-09-24-remapper.md
@@ -12,6 +12,9 @@ commit: "182257f6cb5916b02c60ccfae2c04e488458f204"
 Redeclipse has a nice octree based world and it's an alright FPS platform. The
 F/OSS nature and octree world makes it ideal for hacking and experiments.
 
+* TOC
+{:toc}
+
 ## Initial Hacks
 
 It took a long time to reverse engineer the format. I am not good with C.
