--- a/_posts/2017-09-23-links.md
+++ b/_posts/2017-09-23-links.md
@@ -29,3 +29,8 @@ title: Procedural Dungeon Generation Link Collection
 
 - [https://en.wikipedia.org/wiki/Relative_neighborhood_graph](https://en.wikipedia.org/wiki/Relative_neighborhood_graph) good for keeping paths between rooms short
 - [http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/](http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/) 3 maze-y 5 me
+- [https://twitter.com/ga5p0d3/status/920772026683547654](https://twitter.com/ga5p0d3/status/920772026683547654)
+
+   <video width="626" height="402" autoplay>
+      <source src="https://video.twimg.com/tweet_video/DMc8vUkXcAE36TP.mp4" type="video/mp4">
+   </video>
