--- a/_posts/2017-09-24-remapper.md
+++ b/_posts/2017-09-24-remapper.md
@@ -5,7 +5,7 @@ Tags:
 - mapgen
 date: 2017-09-23T18:00:00Z
 title: REmapper
-repo: erasche/remapper
+repo: hexylena/remapper
 commit: "182257f6cb5916b02c60ccfae2c04e488458f204"
 ---
 
@@ -179,7 +179,7 @@ really super cool and cut down on compile times immensely. I could serialize the
 This led to much, much faster iteration times and let me finish up the vector feature quickly.
 
 Naturally, realising how simple it was to *write* the format, I set out to *read* the format. I wrote a [Kaitai](http://kaitai.io/) struct
-[definition](https://github.com/erasche/remapper/blob/98b0ef35fca824890d97ff36853b87114db726e3/redeclipse/magicavoxel/magicavoxel.ksy)
+[definition](https://github.com/hexylena/remapper/blob/98b0ef35fca824890d97ff36853b87114db726e3/redeclipse/magicavoxel/magicavoxel.ksy)
 for the format to easily parse it. It only handles relatively simple `.vox` files which are output by my tool of choice,
 [goxel](https://github.com/guillaumechereau/goxel), but it works well enough.
 
