--- a/_posts/2017-09-23-links.md
+++ b/_posts/2017-09-23-links.md
@@ -5,10 +5,19 @@ tags:
 - mapgen
 date: 2017-01-31T05:09:00Z
 title: Procedural Dungeon Generation Link Collection
-
+blurb: Collection of potentially useful links concerning dungeon generation algorithms.
+see_also:
+- href: https://github.com/jongallant/DungeonGenerator
+- href: http://www.gamasutra.com/blogs/AAdonaac/20150903/252889/Procedural_Dungeon_Generation_Algorithm.php
+- href: https://www.reddit.com/r/gamedev/comments/1dlwc4/procedural_dungeon_generation_algorithm_explained/
+- href: https://www.reddit.com/r/proceduralgeneration/comments/71spv4/generating_dungeons_using_predefined_rooms_from_a/
+- href: https://web.archive.org/web/20160925032456/http://blog.elysianlegends.com/?p=11
+- href: https://gamedevelopment.tutsplus.com/tutorials/bake-your-own-3d-dungeons-with-procedural-recipes--gamedev-14360
 ---
 
 ## "TinyKeep" style
+
+- 
 
 - [https://github.com/jongallant/DungeonGenerator](https://github.com/jongallant/DungeonGenerator) neat picture
 - [http://www.gamasutra.com/blogs/AAdonaac/20150903/252889/Procedural_Dungeon_Generation_Algorithm.php](http://www.gamasutra.com/blogs/AAdonaac/20150903/252889/Procedural_Dungeon_Generation_Algorithm.php) "minimum spanning tree"
