--- a/_posts/2017-09-24-remapper.md
+++ b/_posts/2017-09-24-remapper.md
@@ -7,6 +7,7 @@ date: 2017-09-23T18:00:00Z
 title: REmapper
 repo: hexylena/remapper
 commit: "182257f6cb5916b02c60ccfae2c04e488458f204"
+blurb: Initial development post for remapper, my RedEclipse Map generation algorithm
 ---
 
 Redeclipse has a nice octree based world and it's an alright FPS platform. The
