--- a/_posts/2019-12-11-rgb-noise.md
+++ b/_posts/2019-12-11-rgb-noise.md
@@ -8,6 +8,12 @@ title: RGB Noise
 page_requires:
 - jquery
 - dat
+blurb: RGB noise inspired by a reddit post.
+see_also:
+- href: /js/rgb-noise.js
+- href: https://developer.mozilla.org/en-US/docs/Web/SVG/Element/feTurbulence
+  text: SVG/Element/feTurbulence
+
 ---
 
 Inspired by [this post](https://www.reddit.com/r/generative/comments/e8iax2/rgb_burn_holes/)
@@ -33,7 +39,6 @@ bindDownloadButton("download", "plot");
 
 <script src="/js/perlin.js"></script>
 <script src="/js/rgb-noise.js"></script>
-See [/js/rgb-noise.js](/js/rgb-noise.js) for the source.
 
 
 Trying to reproduce the noise in the reddit post, I found [the feTurbulence documentation](https://developer.mozilla.org/en-US/docs/Web/SVG/Element/feTurbulence) which had some interesting results (interactive in next post)
