--- a/_posts/2020-05-04-city.md
+++ b/_posts/2020-05-04-city.md
@@ -8,6 +8,11 @@ title: City Sketch
 page_requires:
 - jquery
 - dat
+blurb: Simple cubic cityscapes based off an r/generative post
+see_also:
+- href: https://www.reddit.com/r/generative/comments/gcms5l/cubic_cityscape/
+  text: r/generative/cubic_cityscape
+- href: /js/city.js
 ---
 
 Inspired by [this post](https://www.reddit.com/r/generative/comments/gcms5l/cubic_cityscape/)
@@ -25,4 +30,3 @@ bindDownloadButton("download", "plot");
 <script src="/js/perlin.js"></script>
 <script src="/js/lib.js"></script>
 <script src="/js/city.js"></script>
-See [/js/city.js](/js/city.js) for the source.
