--- a/_posts/2020-05-27-saturn.md
+++ b/_posts/2020-05-27-saturn.md
@@ -8,10 +8,14 @@ title: Saturn
 page_requires:
 - jquery
 - dat
+blurb: Generate planet with rings
+see_also:
+- href: /js/saturn.js
+- href: https://www.reddit.com/r/proceduralgeneration/comments/gjufn1/generative_saturn_plotted_in_gold/
+  text: r/proceduralgeneration/generative_saturn_plotted_in_gold
 ---
 
 Inspired by [this post](https://www.reddit.com/r/proceduralgeneration/comments/gjufn1/generative_saturn_plotted_in_gold/)
-
 
 <svg id="plot" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"/>
 
@@ -25,4 +29,3 @@ bindDownloadButton("download", "plot");
 <script src="/js/perlin.js"></script>
 <script src="/js/lib.js"></script>
 <script src="/js/saturn.js"></script>
-See [/js/saturn.js](/js/saturn.js) for the source.
