--- a/_posts/2019-12-11-rgb-noise2.md
+++ b/_posts/2019-12-11-rgb-noise2.md
@@ -8,6 +8,9 @@ title: RGB Noise 2
 page_requires:
 - jquery
 - dat
+blurb: a second, improved version of RGB noise
+see_also:
+- href: /js/rgb-noise2.js
 ---
 
 Inspired by [this post](https://www.reddit.com/r/generative/comments/e8iax2/rgb_burn_holes/)
@@ -34,5 +37,3 @@ bindDownloadButton("download", "plot");
 
 
 <script src="/js/rgb-noise2.js"></script>
-See [/js/rgb-noise2.js](/js/rgb-noise2.js) for the source.
-
