build roffs too

--- a/_posts/2023-11-04-selfd.md
+++ b/_posts/2023-11-04-selfd.md
@@ -21,6 +21,10 @@ After some discussions on fedi (thanks kouhais) ended up with the design of... y
 
 Did y'all know python has a cgi server included? they're removing it (bad life decision tbh) it's so fucking convenient.
 
+### Update
+
+[the SOLID project/specification](https://solidproject.org/) looks promising for this actually. login via their service, and then it'll persist to your storage backend and you're "in control" of your own storage
+
 ## Graphing
 
 this is like the one major thing left to do. if y'all got suggestions i'm open to them.
