cleaner at least

--- a/_posts/2025-01-07-soundex3.md
+++ b/_posts/2025-01-07-soundex3.md
@@ -91,12 +91,55 @@ Soundex: <span id="output"></span>
 <script src="/js/soundex.js"></script>
 
 <script>
+function soundexForm() {
+	let name = document.getElementById('name').value;
+	// Discard all non-letter characters from surname: dashes, spaces, apostrophes, and so on.
+	let arr = name.toUpperCase().replace(/[^A-Z]/g, '').split('');
+	document.getElementById('step1').innerText = arr.join('');
+	let first = arr[0];
+	arr = arr.map((letter) => {
+		return encoding[letter];
+	});
+	document.getElementById('step2').innerText = arr.join('');
+	let last = "";
+	arr = arr.map((letter) => {
+		if (letter !== last) {
+			last = letter;
+			return letter;
+		} else {
+			last = letter;
+			return null;
+		}
+	})
+	arr = arr.filter((letter) => {
+		return letter !== null;
+	});
+	document.getElementById('step3').innerText = arr.join('');
+	arr[0] = first;
+	document.getElementById('step4').innerText = arr.join('');
+	document.getElementById('pattern').value = arr.join('');
+	arr = arr.filter((letter) => {
+		return letter !== 0;
+	});
+	document.getElementById('step5').innerText = arr.join('');
+	arr = arr.slice(0, 4).join('').padEnd(4, '0');
+	document.getElementById('step6').innerText = arr;
+	//randomizeSoundex();
+}
 soundexForm();
+rsf();
 
 function rsf(){
     let res = document.getElementById("results");
     res.innerHTML = "";
-    let names = reverseSoundexForm(formToOpts("#reverse"));
+    let opts = formToOpts("#reverse");
+
+	let names = [];
+	randomSetSeed(hashCode(opts.seed));
+	for (let i = 0; i < opts.count; i++) {
+		names.push(reverseSoundex(opts));
+	}
+
     names.forEach((name) => {
         let li = document.createElement("li");
         console.log('li', name);
