some improvements for dryad

--- a/_posts/2025-01-07-soundex3.md
+++ b/_posts/2025-01-07-soundex3.md
@@ -156,7 +156,7 @@ document.getElementById("name").addEventListener("keyup", () => {soundexForm(); 
 </script>
 
 <style>
-#reverse {
+form {
     display: flex;
     flex-direction: column;
     width: 20em;
