--- a/_posts/2025-01-07-ktc1400.md
+++ b/_posts/2025-01-07-ktc1400.md
@@ -183,11 +183,13 @@ function encrypt() {
 
     // make this more stable and restart the seed.
     setHash()
-    let [sl, enc_num] = encrypt_num(sheet, first, second);
+    let plaintext_num = document.getElementById("plaintext_num").value;
+    let [sl, enc_num] = encrypt_num(sheet, first, second, plaintext_num);
     document.getElementById("set_letter").innerText = sl;
     document.getElementById("encrypted_num").innerHTML = enc_num;
 
-    [sl, enc_txt] = encrypt_text(sheet, first, second);
+    let plaintext_txt = document.getElementById("plaintext_txt").value.toUpperCase();
+    [sl, enc_txt] = encrypt_text(sheet, first, second, plaintext_txt);
     document.getElementById("encrypted_txt").innerHTML = enc_txt;
 }
 
@@ -204,6 +206,7 @@ function printmode() {
 document.getElementById("first").addEventListener("change", () => {authenticate1(); authenticate2();});
 document.getElementById("second").addEventListener("change", () => {authenticate1(); authenticate2();});
 document.getElementById("plaintext_num").addEventListener("keyup", () => {encrypt();});
+document.getElementById("plaintext_txt").addEventListener("keyup", () => {encrypt();});
 document.getElementById("first").value = nato.slice(0, 25).random();
 document.getElementById("second").value = nato.random();
 document.getElementById("enc_first").value = nato.slice(0, 25).random();
