--- a/_posts/2025-01-07-ktc1400.md
+++ b/_posts/2025-01-07-ktc1400.md
@@ -97,6 +97,25 @@ By design this version uses a seed, if you plan to actually use this, it is prob
     </label>
 </form>
 
+## Decryption
+
+Same thing in reverse.
+
+<form id="dec" onsubmit="return false; ">
+    <label for="ciphertext">Ciphertext 
+        <textarea id="ciphertext">J D HOTMRNWBVKIYFX
+P G BXCVWSP</textarea>
+    </label>
+
+    <label for="dec_num">Decrypted (as numbers)
+        <span id="dec_num" aria-live="polite"></span>
+    </label>
+
+    <label for="dec_txt">Decrypted (as text)
+        <span id="dec_txt" aria-live="polite"></span>
+    </label>
+</form>
+
 
 ## Sheet
 
@@ -193,6 +212,16 @@ function encrypt() {
     document.getElementById("encrypted_txt").innerHTML = enc_txt;
 }
 
+function decrypt() {
+    let ct = document.getElementById("ciphertext").value.trim().toUpperCase().split('\n');
+    let as_txt = document.getElementById("dec_txt"),
+        as_num = document.getElementById("dec_num");
+
+    as_txt.innerText = decryptText(sheet, ct);
+    as_num.innerText = decryptNumeric(sheet, ct);
+
+}
+
 
 function printmode() {
     if (document.getElementById("printmode").checked) {
@@ -215,10 +244,12 @@ document.getElementById("enc_second").value = nato.random();
 document.getElementById("enc_first").addEventListener("change", encrypt);
 document.getElementById("enc_second").addEventListener("change", encrypt);
 document.getElementById("seed").addEventListener("keyup", dryadForm);
+document.getElementById("ciphertext").addEventListener("keyup", decrypt);
 dryadForm();
 
 
 encrypt();
+decrypt();
 
 
 </script>
