--- a/_posts/2025-01-07-ktc1400.md
+++ b/_posts/2025-01-07-ktc1400.md
@@ -77,7 +77,7 @@ By design this version uses a seed, if you plan to actually use this, it is prob
 
 > Numbers are enciphered one digit at a time. A ciphertext letter is chosen from the selected row (the row designated by the SET LETTER) in the column under the plain text digit. If the digit occurs more than once in the number, the coder is instructed to choose a different letter in the same column. All the digits in a single plaintext number are encoded from the same row. (There is also a provision for encoding letters associated with map grid coordinates.) 
 
-<form id="enc_num" onsubmit="return false; ">
+<form id="enc_num" onsubmit="return false; " style="width: 30em">
     <label for="enc_num_plain">Plain text (numeric)
         <input type="text" id="plaintext_num" value="314159265358979323846" />
     </label>
@@ -87,7 +87,7 @@ By design this version uses a seed, if you plan to actually use this, it is prob
     </label>
 </form>
 
-<form id="enc_txt" onsubmit="return false; ">
+<form id="enc_txt" onsubmit="return false; " style="width: 30em">
     <label for="enc_txt_plain">Plain text 
         <input type="text" id="plaintext_txt" value="RETREAT"/>
     </label>
@@ -101,7 +101,7 @@ By design this version uses a seed, if you plan to actually use this, it is prob
 
 Same thing in reverse.
 
-<form id="dec" onsubmit="return false; ">
+<form id="dec" onsubmit="return false; " style="width: 30em">
     <label for="ciphertext">Ciphertext 
         <textarea id="ciphertext">J D HOTMRNWBVKIYFX
 P G BXCVWSP</textarea>
@@ -174,7 +174,7 @@ function dryadForm() {
     authenticate1();
     authenticate2();
     document.getElementById("f_seed").innerText = random().toString(36).slice(2);
-    document.getElementById("f_key").innerText = opts.seed.toUpperCase();
+    document.getElementById("f_key").innerText = opts.seed.toUpperCase() + (opts.seed === "CSPRNG" ? " (secure)" : "");
 }
 
 function authenticate1() {
