also refresh these

--- a/_posts/2025-01-07-ktc1400.md
+++ b/_posts/2025-01-07-ktc1400.md
@@ -175,6 +175,8 @@ function dryadForm() {
     authenticate2();
     document.getElementById("f_seed").innerText = random().toString(36).slice(2);
     document.getElementById("f_key").innerText = opts.seed.toUpperCase() + (opts.seed === "CSPRNG" ? " (secure)" : "");
+    encrypt();
+    decrypt();
 }
 
 function authenticate1() {
