just recalculate it all fuck it

--- a/_posts/2025-01-07-ktc1400.md
+++ b/_posts/2025-01-07-ktc1400.md
@@ -234,19 +234,19 @@ function printmode() {
 }
 
 // one-off
-document.getElementById("first").addEventListener("change", () => {authenticate1(); authenticate2();});
-document.getElementById("second").addEventListener("change", () => {authenticate1(); authenticate2();});
-document.getElementById("plaintext_num").addEventListener("keyup", () => {encrypt();});
-document.getElementById("plaintext_txt").addEventListener("keyup", () => {encrypt();});
+document.getElementById("first").addEventListener("change", dryadForm);
+document.getElementById("second").addEventListener("change", dryadForm);
+document.getElementById("plaintext_num").addEventListener("keyup", dryadForm);
+document.getElementById("plaintext_txt").addEventListener("keyup", dryadForm);
 document.getElementById("first").value = nato.slice(0, 25).random();
 document.getElementById("second").value = nato.random();
 document.getElementById("enc_first").value = nato.slice(0, 25).random();
 document.getElementById("enc_second").value = nato.random();
 
-document.getElementById("enc_first").addEventListener("change", encrypt);
-document.getElementById("enc_second").addEventListener("change", encrypt);
+document.getElementById("enc_first").addEventListener("change", dryadForm);
+document.getElementById("enc_second").addEventListener("change", dryadForm);
 document.getElementById("seed").addEventListener("keyup", dryadForm);
-document.getElementById("ciphertext").addEventListener("keyup", decrypt);
+document.getElementById("ciphertext").addEventListener("keyup", dryadForm);
 dryadForm();
 
 
